--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -22,7 +22,7 @@
         <p>HELLO</p>
         <h2>I am</h2>
         <h2>MART ANTHONY SALAZAR</h2>
-        <p>WEBSITE DESIGNER</p> <br>
+        <p id="web">WEBSITE DESIGNER</p> <br>
     </div>
     <button id="see-more" onclick="navigate()">See more</button>
 
