--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,7 +12,7 @@
         <div class="nav">
             
             <ul>
-                <li><a href="./home.html"><img src="home-run.png" alt="Home-icon">Home</a></li>
+                <li><a href="index.html"><img src="home-run.png" alt="Home-icon">Home</a></li>
                 <li><a href="#"><img src="businessman.png" alt="about-icon">About</a></li>
                 <li><a href="#"><img src="skill.png" alt="skills-icon">Skills</a></li>
                 <li><a href="#"><img src="contact.png" alt="contact-icon">Contact</a></li>
