--- a/Portfolio/home.html
+++ b/Portfolio/home.html
@@ -12,7 +12,7 @@
         <div class="nav">
             <div class="logo"></div>
             <ul>
-                <li><a href="home.html"><img src="home-run.png" alt="Home-icon">Home</a></li>
+                <li><a href="index.html"><img src="home-run.png" alt="Home-icon">Home</a></li>
                 <li><a href="#"><img src="businessman.png" alt="about-icon">About</a></li>
                 <li><a href="#skills"><img src="skill.png" alt="skills-icon">Skills</a></li>
                 <li><a href="#"><img src="contact.png" alt="contact-icon">Contact</a></li>
@@ -37,7 +37,7 @@
     
     <!--Skills--->
     <div class="boxCont" id="skills">
-        <h2 id="ski">Skills</h2>
+        <h2 id="ski">Technical Skills</h2>
     <div class="box">
         <div id="html" class="percent">
             <svg>
